--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ header{
     top: 0;
     left: 0;
     border-bottom: 1px solid #ADD8E6;
+    box-shadow: 0 0 10px #000;
+    background: rgba(0,0,0,0.5);
 }
 
 header nav{
@@ -102,3 +104,291 @@ header ul a{
     top: 4.5px;
     
 }
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+.parallax{
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    transition: 0.45s cubic-bezier(0.2,0.49,0.32,0.99);
+}
+
+/*1920w x 927h*/
+
+.bg-img{
+    position: absolute;
+    width: 4050px;
+    top: calc(50% + +150px);
+    left: calc(50% + 600px);
+    z-index: 1;
+}
+
+.fog-img{
+    position: absolute;
+    width: 2300px;
+    top: calc(50% + +150px);
+    left: calc(50% + 5px);
+    z-index: 3;
+}
+
+.fog2-img{
+    position: absolute;
+    width: 2300px;
+    top: calc(50% + +0px);
+    left: calc(50% - 200px);
+    z-index: 4;
+}
+
+.funicular-img{
+    position: absolute;
+    width: 500px;
+    top: calc(50% + +550px);
+    left: calc(50% - 00px);
+    z-index: 6;
+}
+.mountain2-img{
+    position: absolute;
+    width: 2520px;
+    top: calc(50% - 14px);
+    left: calc(50% + 800px);
+    z-index: 8;
+}
+
+.mountain1-img{
+    position: absolute;
+    width: 1750px;
+    top: calc(50% + 91px);
+    left: calc(50% - 400px);
+    z-index: 7;
+}
+
+
+.black-shadow{
+    position: absolute;
+    width: 2000px;
+    top: calc(50% + 170px);
+    left: calc(50% - 1000px);
+    z-index: 9;
+}
+
+.text {
+    position: absolute;
+    z-index: 4;
+    top: calc(50% + 0px);
+    left: calc(50% - 100px);
+    text-align: center;
+    text-transform: uppercase;
+    pointer-events: auto;
+    color: white;
+}
+
+.text h2{
+    font-weight: 400;
+    font-size: 6.5rem;
+}
+
+.text h1{
+    font-weight: 800;
+    font-size: 7rem;
+}
+
+.vignette{
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.7))
+}
+
+
+@media (max-width: 1100px){
+    .text h1{
+        font-size: 5.8rem;
+    }
+
+    .text h2{
+        font-size: 4.7rem;
+    }
+
+    .bg-img{
+        position: absolute;
+        width: 2400px;
+        top: calc(50% + +0px);
+        left: calc(50% + 0px);
+        z-index: 1;
+    }
+    
+    .fog-img{
+        position: absolute;
+        width: 1300px;
+        top: calc(50% + +150px);
+        left: calc(50% + 5px);
+        z-index: 3;
+    }
+    
+    .fog2-img{
+        position: absolute;
+        width: 1300px;
+        top: calc(50% + +0px);
+        left: calc(50% - 200px);
+        z-index: 4;
+    }
+    
+    .mountain2-img{
+        position: absolute;
+        width: 1790px;
+        top: calc(50% + 0px);
+        left: calc(50% + 200px);
+        z-index: 8;
+    }
+    
+    .mountain1-img{
+        position: absolute;
+        width: 1250px;
+        top: calc(50% + 91px);
+        left: calc(50% - 00px);
+        z-index: 7;
+    }
+    
+    
+}
+
+@media (max-width: 725px){
+    .text h1{
+        font-size: 5rem;
+        line-height: 1.1;
+    }
+
+    .text h2{
+        font-size: 4.1rem;
+        line-height: 1.1;
+    }
+
+    header nav{
+        padding: 0 1rem;
+    }
+
+    .logo{
+        width: 75px;
+    }
+
+    header ul a{
+        font-size: 0.73rem;
+        padding: 0 0.9rem;
+    }
+
+    .search a{
+        font-size: 0.85rem;
+        padding: 0 1.8rem;
+    }
+
+    .hamburger {
+        padding-left: 0.9rem;
+    }
+
+    .hamburger a {
+        height: 30px;
+        width: 30px;
+    }
+
+    .bg-img{
+        position: absolute;
+        width: 2000px;
+        top: calc(50% - 40px);
+        left: calc(50% + 0px);
+        z-index: 1;
+    }
+    
+    .fog-img{
+        position: absolute;
+        width: 1300px;
+        top: calc(50% + +150px);
+        left: calc(50% + 5px);
+        z-index: 3;
+    }
+    
+    .fog2-img{
+        position: absolute;
+        width: 1300px;
+        top: calc(50% + +0px);
+        left: calc(50% - 200px);
+        z-index: 4;
+    }
+    
+    .mountain2-img{
+        position: absolute;
+        width: 1690px;
+        top: calc(50% + 0px);
+        left: calc(50% + 200px);
+        z-index: 8;
+    }
+    
+    .mountain1-img{
+        position: absolute;
+        width: 1050px;
+        top: calc(50% + 91px);
+        left: calc(50% - 100px);
+        z-index: 7;
+    }
+}
+
+
+@media (max-width: 520px){
+    .text h1{
+        font-size: 3.3rem;
+        line-height: 1.1;
+    }
+
+    .text h2{
+        font-size: 2.6rem;
+        line-height: 1.1;
+    }
+
+    .bg-img{
+        position: absolute;
+        width: 2400px;
+        top: calc(50% + +0px);
+        left: calc(50% + 0px);
+        z-index: 1;
+    }
+    
+    .fog-img{
+        position: absolute;
+        width: 1300px;
+        top: calc(50% + +150px);
+        left: calc(50% + 5px);
+        z-index: 3;
+    }
+    
+    .fog2-img{
+        position: absolute;
+        width: 1300px;
+        top: calc(50% + +0px);
+        left: calc(50% - 200px);
+        z-index: 4;
+    }
+    
+    .mountain2-img{
+        position: absolute;
+        width: 1490px;
+        top: calc(50% + 100px);
+        left: calc(50% + 100px);
+        z-index: 8;
+    }
+    
+    .mountain1-img{
+        position: absolute;
+        width: 950px;
+        top: calc(50% + 91px);
+        left: calc(50% - 100px);
+        z-index: 7;
+    }
+}
+
